mobile nav scss is done

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -7,7 +7,10 @@ $desktopVersion: 1000px;
 
 // Colors
 // $mainColor: ;
-// $footerColor: ;
+$lightYellow: #f5f0bb;
+$hoverColor: #c4dfaa;
+$navColor: #90c8ac;
+$footerColor: #73a9ad;
 
 // Font Families
 // $fontFamily: "", sans-serif;
