--- a/scss/_normalize.scss
+++ b/scss/_normalize.scss
@@ -1,7 +1,7 @@
 * {
     margin: 0;
     padding: 0;
-    font-family: $fontFamily;
+    // font-family: $fontFamily;
 }
 
 html {
@@ -10,7 +10,7 @@ html {
 
 a {
     text-decoration: none;
-    transition: 0.6s;
+    transition: 0.4s;
 }
 
 li {
