variable, normalize fixed

--- a/scss/devices/home/_desktop.scss
+++ b/scss/devices/home/_desktop.scss
@@ -30,7 +30,7 @@
             color: black;
             font-weight: 600;
             &:hover {
-                color: $navColor;
+                color: $nav;
             }
         }
     }
