--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,16 +1,13 @@
-// @import url("https://fonts.googleapis.com/");
-
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Lato:wght@100;300;400;700;900&family=Montserrat:wght@100;200;300;400;500;600;700;800;900&family=Noto+Sans:wght@100;200;300;400;500;600;700;800;900&family=Nunito:wght@200;300;400;500;600;700;800;900;1000&family=Open+Sans:wght@300;400;500;600;700;800&family=Roboto+Slab:wght@100;200;300;400;500;600;700;800;900&family=Source+Sans+Pro:wght@200;300;400;600;700;900&display=swap");
 // Screen Size
 $mobileVersion: 200px;
 $tabletVersion: 600px;
 $desktopVersion: 1000px;
 
 // Colors
-// $mainColor: ;
-$lightYellow: #f5f0bb;
-$hoverColor: #c4dfaa;
-$navColor: #90c8ac;
-$footerColor: #73a9ad;
-
+$mainColor: #f5f0bb;
+$hover: #c4dfaa;
+$nav: #90c8ac;
+$footer: #73a9ad;
 // Font Families
-// $fontFamily: "", sans-serif;
+$fontFamily: "Noto Sans", sans-serif;
