--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -9,5 +9,6 @@ $mainColor: #F5F0BB;
 $hover: #C4DFAA;
 $nav: #90C8AC;
 $footer: #73A9AD;
+$aColor:#0E8388;
 // Font Families
 $fontFamily: "Noto Sans", sans-serif;
