--- a/scss/devices/korea/_mobile.scss
+++ b/scss/devices/korea/_mobile.scss
@@ -13,7 +13,7 @@
     nav {
         position: relative;
         padding: 3%;
-        background-color: whitesmoke;
+        background-color: white;
         @include flexRow;
         justify-content: space-between;
 
@@ -60,4 +60,10 @@
             }
         }
     }
+
+    // HEADER
+    .kheader {
+    }
+
+    // FOOTER
 }
