--- a/scss/devices/home/_mobile.scss
+++ b/scss/devices/home/_mobile.scss
@@ -11,7 +11,7 @@
             align-items: center;
             text-align: center;
         }
-    }
+    } 
     // NAV
     nav {
         position: relative;
@@ -68,6 +68,7 @@
         @include flexCol(2vh);
         @include flexCenter;
         article{
+            width: 95%;
             padding-top: 2vh;
             padding-bottom: 2vh;
             @include flexCenter;
@@ -76,6 +77,36 @@
         }
     }
     // SUMMARY END
+    // BRAZIL START
+    .brazil{
+        @include flexCol(2vh);
+        @include flexCenter;
+        section{
+            background-image: url(/img/home/brazil-flag.jpg);
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: cover;
+            width: 95%;
+            height: 10vh;
+            aside{
+                width: 100%;
+                height: 100%;
+                @include flexCenter;
+                background-color: rgba(0, 0, 0, 0.492);
+            }
+            h3{
+                color: white;
+            }
+        }
+        article{
+            width: 95%;
+            padding-top: 2vh;
+            padding-bottom: 2vh;
+            text-align: center;
+            background-color: lightgray;
+        }
+    }
+    // BRAZIL END
     // FOOTER START
     footer{
         background-color: $footer;
