--- a/scss/devices/korea/_mobile.scss
+++ b/scss/devices/korea/_mobile.scss
@@ -62,7 +62,197 @@
     }
 
     // HEADER
-    .kheader {
+    .kHeader {
+        background-image: url("/img/korea/bg-header.jpg");
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        height: 55vh;
+        > section {
+            width: 100%;
+            height: 100%;
+            background-color: rgba(80, 80, 80, 0.6);
+            @include flexCol(2vh);
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+            color: white;
+            > h1 {
+                font-size: 40px;
+            }
+            > h2 {
+                width: 80%;
+                font-size: 15px;
+                font-weight: 500;
+            }
+        }
+    }
+
+    //MAIN
+    .kMain {
+        @include flexCol(8vh);
+        padding: 15% 0;
+        p {
+            font-size: 15px;
+            color: dimgray;
+            text-align: justify;
+        }
+        > section {
+            @include flexCol(5vh);
+        }
+        > section > article {
+            @include flexCol(2vh);
+            align-items: center;
+            text-align: center;
+            > h3 {
+                font-size: 23px;
+                text-transform: uppercase;
+            }
+            > h4 {
+                font-weight: 500;
+                font-size: 13px;
+                color: $footer;
+            }
+        }
+    }
+
+    .kIntro {
+        padding: 0 5%;
+        img:first-child {
+            display: none;
+        }
+
+        figure {
+            @include flexCol(2vh);
+            align-items: center;
+            padding: 5%;
+            background-color: $mainColor;
+            > img {
+                width: 25vw;
+            }
+            > figcaption {
+                @include flexCol(2vh);
+                text-align: justify;
+                font-size: 15px;
+            }
+        }
+    }
+
+    .kSeoul {
+        padding: 0 5%;
+        img {
+            width: 100%;
+        }
+        > section {
+            @include flexCol(3vh);
+        }
+        aside {
+            display: flex;
+            flex-direction: column-reverse;
+            row-gap: 2vh;
+            background-color: whitesmoke;
+            padding: 8% 5%;
+            > figure,
+            figcaption {
+                @include flexCol(2vh);
+                text-align: justify;
+            }
+            figcaption > h3 {
+                border: 2px dashed $footer;
+                width: 96%;
+                padding: 2%;
+                text-align: center;
+                color: $footer;
+                border-radius: 10px;
+            }
+            > h3 {
+                text-transform: uppercase;
+                font-size: 20px;
+            }
+        }
+    }
+
+    .kJeju {
+        background-color: $mainColor;
+        padding: 10% 5%;
+        img {
+            width: 100%;
+            height: 45vh;
+        }
+        figure,
+        > section > article {
+            @include flexCol(2vh);
+            align-items: center;
+        }
+        > section {
+            @include flexCol(3vh);
+        }
+        a {
+            margin-top: 8%;
+            background-color: $hover;
+            border: 2px solid $hover;
+            color: black;
+            width: 40%;
+            text-align: center;
+            padding: 2%;
+        }
+    }
+
+    .kRecommendation {
+        > section {
+            @include flexCol(10vh);
+            padding: 5%;
+        }
+        img {
+            width: 100%;
+        }
+    }
+
+    .kFood,
+    .kAlcohol {
+        @include flexCol(5vh);
+        > h3 {
+            padding: 2%;
+            font-size: 20px;
+            text-align: center;
+            background-color: gainsboro;
+            // background-color: $footer;
+        }
+        figure,
+        figcaption {
+            @include flexCol(1vh);
+            h3 {
+                border: 2px dashed $footer;
+                width: 96%;
+                padding: 2%;
+                text-align: center;
+                color: $footer;
+                border-radius: 10px;
+            }
+        }
+        p {
+            padding-bottom: 3vh;
+        }
+    }
+
+    .kSeason {
+        padding: 10% 5%;
+        background-color: $mainColor;
+        img {
+            width: 100%;
+            height: 50vh;
+        }
+        > section {
+            @include flexCol(5vh);
+        }
+        aside {
+            @include flexCol(2vh);
+            background-color: whitesmoke;
+            padding: 5%;
+            > h3 {
+                text-transform: uppercase;
+            }
+        }
     }
 
     // FOOTER
