--- a/scss/devices/brasil/_mobile.scss
+++ b/scss/devices/brasil/_mobile.scss
@@ -14,6 +14,7 @@
             section{
                 width: 95%;
                 @include flexCol(3vw);
+                @include flexCenter;
                 text-align: center;
                 padding-bottom: 2vh;
             }
