--- a/scss/devices/home/_mobile.scss
+++ b/scss/devices/home/_mobile.scss
@@ -1,10 +1,4 @@
 @media (min-width: $mobileVersion) {
-    video {
-        width: 20%;
-        // To see Scroll
-        height: 100vh;
-    }
-
     // NAV
     nav {
         position: relative;
@@ -56,4 +50,56 @@
             }
         }
     }
+    // Header
+    header{
+        height: 60vh;
+        width: 100%;
+        position: absolute;
+        video{
+            height: 100%;
+            object-fit: cover;
+            position: absolute;
+            z-index: 1;
+            width: 100%;
+        }
+        > section{
+            position: relative;
+            z-index: 2;
+            background-color:rgba($color: $footer, $alpha: .4);
+            width: 100%;
+            height: 100%;
+            @include flexCol(0);
+            justify-content: center;
+            align-items: center;
+        }
+        article{
+            text-align: center;
+            color: white;
+        }
+        form{
+            border: 2px solid white;
+            display: flex;
+            row-gap: 0;
+            [type=submit]{
+                font-size: 1.1rem;
+                background-color: white;
+            }
+        }
+        input{
+            border: none;
+            background-color: rgba($color: black
+            , $alpha: .4);
+            padding: 1vh 1vh;
+        }
+        a{
+            color: white;
+        }
+        
+    }
+    ::placeholder{
+        color: white;
+        font-weight: 600;
+        font-size: 1.1rem;
+    }
+    
 }
