--- a/scss/devices/korea/_mobile.scss
+++ b/scss/devices/korea/_mobile.scss
@@ -116,6 +116,7 @@
         }
     }
 
+    // INTRO
     .kIntro {
         padding: 0 5%;
         img:first-child {
@@ -138,6 +139,7 @@
         }
     }
 
+    // SEOUL
     .kSeoul {
         padding: 0 5%;
         img {
@@ -172,6 +174,7 @@
         }
     }
 
+    // JEJU
     .kJeju {
         background-color: $mainColor;
         padding: 10% 5%;
@@ -198,6 +201,7 @@
         }
     }
 
+    // RECOMMENDATION
     .kRecommendation {
         > section {
             @include flexCol(10vh);
@@ -235,6 +239,7 @@
         }
     }
 
+    // SEASON
     .kSeason {
         padding: 10% 5%;
         background-color: $mainColor;
@@ -252,8 +257,53 @@
             > h3 {
                 text-transform: uppercase;
             }
+            ul {
+                @include flexCol(1vh);
+                align-items: center;
+            }
+            li {
+                column-gap: 2vw;
+                align-items: baseline;
+                font-size: 15px;
+            }
+            li:first-child > i {
+                color: dimgray;
+            }
         }
     }
 
     // FOOTER
+    footer {
+        background-color: $footer;
+        height: 16vh;
+        width: 100%;
+        section {
+            @include flexCol(2vw);
+            @include flexCenter;
+            width: 100%;
+            height: 100%;
+            p {
+                color: white;
+            }
+            ul {
+                @include flexRow(3vh);
+            }
+            li {
+                position: relative;
+                display: inline-block;
+                width: 30px;
+                height: 30px;
+                border-radius: 50%;
+                border: 2px solid white;
+            }
+            a {
+                color: white;
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%);
+                font-size: 15px;
+            }
+        }
+    }
 }
