--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -9,5 +9,6 @@ $mainColor: #f5f0bb;
 $hover: #c4dfaa;
 $nav: #90c8ac;
 $footer: #73a9ad;
+$aColor: #0e8388;
 // Font Families
 $fontFamily: "Noto Sans", sans-serif;
