--- a/scss/devices/korea/_mobile.scss
+++ b/scss/devices/korea/_mobile.scss
@@ -1,14 +1,4 @@
 @media (min-width: $mobileVersion) {
-    video {
-        width: 20%;
-        // To see Scroll
-        height: 100vh;
-    }
-
-    img {
-        width: 20%;
-    }
-
     // NAV
     nav {
         position: relative;
@@ -91,7 +81,7 @@
     //MAIN
     .kMain {
         @include flexCol(8vh);
-        padding: 15% 0;
+        padding-top: 15%;
         p {
             font-size: 15px;
             color: dimgray;
