--- a/scss/devices/korea/_desktop.scss
+++ b/scss/devices/korea/_desktop.scss
@@ -1,4 +1,5 @@
 @media (min-width: $desktopVersion) {
+    // NAV
     details {
         display: none;
     }
@@ -9,6 +10,7 @@
         align-items: center;
         position: sticky;
         top: 0;
+        z-index: 5;
 
         > ul {
             @include flexRow(1vw);
@@ -32,6 +34,112 @@
             &:hover {
                 color: $nav;
             }
+        }
+    }
+
+    // HEADER
+    .kHeader {
+        height: 75vh;
+        > section {
+            > h1 {
+                font-size: 55px;
+            }
+            > h2 {
+                font-size: 25px;
+            }
+        }
+    }
+
+    // MAIN
+    .kMain {
+        row-gap: 15vh;
+        > section > article {
+            > h3 {
+                font-size: 30px;
+            }
+            > h4 {
+                font-size: 20px;
+            }
+        }
+    }
+
+    // INTRO
+    .kIntro figure {
+        flex-direction: row;
+        column-gap: 5vw;
+        padding: 3%;
+        > img {
+            width: 15vw;
+        }
+    }
+
+    // SEOUL
+    .kSeoul {
+        figure {
+            height: 55vh;
+            > figcaption > h3 {
+                font-size: 20px;
+            }
+            > figcaption > p {
+                font-size: 17px;
+            }
+        }
+    }
+
+    // JEJU
+    .kJeju {
+        figure {
+            flex-direction: row;
+            column-gap: 2vw;
+            img {
+                width: 32%;
+            }
+        }
+        a {
+            width: 15%;
+            font-size: 18px;
+        }
+        > section {
+            row-gap: 5vh;
+        }
+    }
+
+    // RECOMMENDATION
+    .kRecommendation {
+        figure {
+            height: 55vh;
+            > figcaption > h3 {
+                font-size: 20px;
+            }
+            > figcaption > p {
+                font-size: 17px;
+            }
+        }
+    }
+
+    // SEASON
+    .kSeason {
+        > section {
+            row-gap: 1vw;
+            column-gap: 0;
+        }
+        aside {
+            width: 20%;
+            padding: 2%;
+            min-height: 62vh;
+            ul {
+                row-gap: 3vh;
+            }
+        }
+    }
+
+    // FOOTER
+    footer {
+        @include flexCenter;
+        section {
+            width: 95%;
+            flex-direction: row;
+            justify-content: space-between;
         }
     }
 }
