--- a/scss/devices/home/_desktop.scss
+++ b/scss/devices/home/_desktop.scss
@@ -9,6 +9,7 @@
         align-items: center;
         position: sticky;
         top: 0;
+        z-index: 5;
 
         > ul {
             @include flexRow(1vw);
@@ -35,10 +36,30 @@
         }
     }
     //HEADER
-    header{
+    header {
         height: 75vh;
     }
-    video{
+    video {
         height: 75vh;
+    }
+
+    // KOREA
+    .korea {
+        h3 {
+            font-size: 30px;
+        }
+        figure {
+            align-items: center;
+        }
+        figcaption {
+            align-items: center;
+            p {
+                font-size: 18px;
+            }
+            a {
+                font-weight: 600;
+                font-size: 19px;
+            }
+        }
     }
 }
