--- a/scss/devices/home/_mobile.scss
+++ b/scss/devices/home/_mobile.scss
@@ -1,12 +1,12 @@
 @media (min-width: $mobileVersion) {
-    main{
-        section{
+    main {
+        section {
             width: 100%;
             @include flexCol(3vw);
             align-items: center;
             text-align: center;
         }
-    } 
+    }
     // NAV
     nav {
         position: relative;
@@ -59,49 +59,47 @@
         }
     }
     // HEADER
-    header{
-    height: 60vh;
-    width: 100%;
-    > section{
-        position: relative;
-        z-index: 2;
-        background-color:rgba($color: $footer, $alpha: .4);
+    header {
+        height: 60vh;
         width: 100%;
-        height: 100%;
-        @include flexCol(0);
-        justify-content: center;
-        align-items: center;
-    }
-    article{
-        text-align: center;
-        color: white;
-    }
-    form{
-        border: 2px solid white;
-        display: flex;
-        row-gap: 0;
-        [type=submit]{
-            font-size: 1.1rem;
-            background-color: white;
+        > section {
+            position: relative;
+            z-index: 2;
+            background-color: rgba($color: $footer, $alpha: 0.4);
+            width: 100%;
+            height: 100%;
+            @include flexCol(0);
+            justify-content: center;
+            align-items: center;
+        }
+        article {
+            text-align: center;
+            color: white;
+        }
+        form {
+            border: 2px solid white;
+            display: flex;
+            row-gap: 0;
+            [type="submit"] {
+                font-size: 1.1rem;
+                background-color: white;
+            }
+        }
+        input {
+            border: none;
+            background-color: rgba($color: black, $alpha: 0.4);
+            padding: 1vh 1vh;
+        }
+        a {
+            color: white;
         }
     }
-    input{
-        border: none;
-        background-color: rgba($color: black
-        , $alpha: .4);
-        padding: 1vh 1vh;
-    }
-    a{
-        color: white;
-    }
-    
-    }
-    ::placeholder{
+    ::placeholder {
         color: white;
         font-weight: 600;
         font-size: 1.1rem;
     }
-    video{
+    video {
         height: 60vh;
         object-fit: cover;
         position: absolute;
@@ -109,10 +107,10 @@
         width: 100%;
     }
     // SUMMARY START
-    .summary{
+    .summary {
         @include flexCol(2vh);
         @include flexCenter;
-        article{
+        article {
             width: 95%;
             padding-top: 2vh;
             padding-bottom: 2vh;
@@ -123,27 +121,27 @@
     }
     // SUMMARY END
     // BRAZIL START
-    .brazil{
+    .brazil {
         @include flexCol(2vh);
         @include flexCenter;
-        section{
+        section {
             background-image: url(/img/home/brazil-flag.jpg);
             background-position: center;
             background-repeat: no-repeat;
             background-size: cover;
             width: 95%;
             height: 10vh;
-            aside{
+            aside {
                 width: 100%;
                 height: 100%;
                 @include flexCenter;
                 background-color: rgba(0, 0, 0, 0.492);
             }
-            h3{
+            h3 {
                 color: white;
             }
         }
-        article{
+        article {
             width: 95%;
             padding-top: 2vh;
             padding-bottom: 2vh;
@@ -152,34 +150,64 @@
         }
     }
     // BRAZIL END
+
+    // KOREA START
+    .korea {
+        @include flexCol(1vh);
+        h3 {
+            font-size: 23px;
+        }
+        img {
+            width: 60%;
+        }
+        figure {
+            @include flexCol(1vh);
+            align-items: center;
+        }
+        figcaption {
+            @include flexCol(4vh);
+            align-items: center;
+            padding-bottom: 5vh;
+            width: 90%;
+            a {
+                background-color: $mainColor;
+                border: 2px solid $mainColor;
+                border-radius: 20px;
+                color: black;
+                padding: 2%;
+                width: 30%;
+            }
+        }
+    }
+    // KOREA END
     // FOOTER START
-    footer{
+    footer {
         background-color: $footer;
         height: 16vh;
         width: 100%;
-        section{
+        section {
             @include flexCol(2vw);
             width: 100%;
             height: 100%;
             align-items: center;
             justify-content: center;
-            p{
+            p {
                 color: white;
             }
-            ul{
+            ul {
                 @include flexRow(3vh);
                 display: flex;
                 column-gap: 3vh;
             }
-            li{
+            li {
                 position: relative;
                 display: inline-block;
                 width: 30px;
                 height: 30px;
                 border-radius: 50%;
                 border: 2px solid white;
-            }   
-            a{
+            }
+            a {
                 color: white;
                 position: absolute;
                 top: 50%;
