--- a/scss/devices/home/_desktop.scss
+++ b/scss/devices/home/_desktop.scss
@@ -37,6 +37,27 @@
     //HEADER
     header{
         height: 75vh;
+        a{
+            padding: 1vh 7vh;
+        }
+        h3{
+            width: 50%;
+        }
+        h2{
+            font-size: 3.5rem;
+        }
+        h1{
+            font-size: 2.5rem;
+        }
+        form{
+            [type=search]{
+                padding-right: 12vh;
+            }
+        }
+        input{
+            padding-bottom: 2%;
+            padding-top: 2%;
+        }
     }
     video{
         height: 75vh;
