--- a/scss/devices/home/_mobile.scss
+++ b/scss/devices/home/_mobile.scss
@@ -60,49 +60,80 @@
     }
     // HEADER
     header{
-    height: 60vh;
-    width: 100%;
-    > section{
-        position: relative;
-        z-index: 2;
-        background-color:rgba($color: $footer, $alpha: .4);
+        height: 65vh;
         width: 100%;
-        height: 100%;
-        @include flexCol(0);
-        justify-content: center;
-        align-items: center;
-    }
-    article{
-        text-align: center;
-        color: white;
-    }
-    form{
-        border: 2px solid white;
-        display: flex;
-        row-gap: 0;
-        [type=submit]{
-            font-size: 1.1rem;
-            background-color: white;
+        > section{
+            position: relative;
+            z-index: 2;
+            background-color:rgba($color: $nav, $alpha: .3);
+            width: 100%;
+            height: 100%;
+            @include flexCol(3vh);
+            justify-content: center;
+            align-items: center;
         }
-    }
-    input{
-        border: none;
-        background-color: rgba($color: black
-        , $alpha: .4);
-        padding: 1vh 1vh;
-    }
-    a{
-        color: white;
-    }
+        article{
+            text-align: center;
+            color: white;
+            height: 45%;
+            @include flexCol(0);
+            align-items: center;
+        }
+        form{
+            border: 3px solid $nav;
+            display: flex;
+            row-gap: 0;
+            border-radius: 7px;
+            [type=submit]{
+                font-size: 1.1rem;
+                background-color: $nav;
+                color: white;
+                font-weight: 700;
+            }
+        }
+        input{
+            border: none;
+            background-color: rgba($color: black
+            , $alpha: .4);
+            padding: 1vw 1vw;
+        }
+        h3{
+            background-color: $nav;
+            border: 1px solid $nav;
+            border-radius: 15px;
+            font-size: .8rem;
+            width: 85%;
+            padding: 2vw;
+        }
+        strong{
+            color: #0E8388;
+        }
+        h2{
+            font-size: 2rem;
+            font-weight: 900;
+        }
+        h1{
+            font-size: 1.5rem;
+            font-family: 700;
+        }
+        a{
+            color: whitesmoke;
+            background-color: #0E8388;
+            border: 1px solid #0E8388;
+            border-radius: 10px;
+            padding: 1vw 5vh;
+            font-size: 1.1rem;
+            font-weight: 700;
+        }
     
     }
     ::placeholder{
         color: white;
         font-weight: 600;
-        font-size: 1.1rem;
+        font-size: 1rem;
     }
     video{
-        height: 60vh;
+        height: 65vh;
         object-fit: cover;
         position: absolute;
         z-index: 1;
