--- a/scss/devices/korea/_desktop.scss
+++ b/scss/devices/korea/_desktop.scss
@@ -40,13 +40,26 @@
     // HEADER
     .kHeader {
         height: 75vh;
-        > section {
-            > h1 {
-                font-size: 55px;
+        a {
+            padding: 1vh 7vh;
+        }
+        h3 {
+            width: 50%;
+        }
+        h2 {
+            font-size: 3.5rem;
+        }
+        h1 {
+            font-size: 2.5rem;
+        }
+        form {
+            [type="search"] {
+                padding-right: 12vh;
             }
-            > h2 {
-                font-size: 25px;
-            }
+        }
+        input {
+            padding-bottom: 2%;
+            padding-top: 2%;
         }
     }
 
