--- a/scss/devices/brasil/_desktop.scss
+++ b/scss/devices/brasil/_desktop.scss
@@ -3,7 +3,6 @@
     details {
         display: none;
     }
-
     nav {
         height: 10vh;
         padding: 0 3%;
@@ -36,6 +35,32 @@
         }
     }
     // NAV END
+    // HEADER START
+    .kHeader {
+        height: 75vh;
+        a {
+            padding: 1vh 7vh;
+        }
+        h3 {
+            width: 50%;
+        }
+        h2 {
+            font-size: 3.5rem;
+        }
+        h1 {
+            font-size: 2.5rem;
+        }
+        form {
+            [type="search"] {
+                padding-right: 12vh;
+            }
+        }
+        input {
+            padding-bottom: 2%;
+            padding-top: 2%;
+        }
+    }
+        // HEADER END
     // CULTURE START
     .culture{
         article{
@@ -43,7 +68,7 @@
             align-items: normal;
             figure{
                 width: 50%;
-                height: 200vh;
+                height: 220vh;
             }
             img{
                 height: 160px;
@@ -58,7 +83,7 @@
              align-items: normal;
             figure{
                 width: 50%;
-                height: 110vh;
+                height: 130vh;
             }
             img{
                 height: 170px;
